-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.5
-
None
-
Lustre 2.10.5, ZFS 0.6.5.11, Kernel 3.10.0-862.9.1.el7_lustre.x86_64
-
3
-
9223372036854775807
Clients crashed when accessing some files that are striped over OSTs that were removed:
LustreError: 11963:0:(lov_ea.c:235:lsme_unpack()) fsname-clilov_UUID: OST index 25 missing LustreError: 11963:0:(lov_ea.c:235:lsme_unpack()) Skipped 3 previous similar messages Lustre: 11963:0:(lov_pack.c:61:lov_dump_lmm_common()) objid 0xdf4e:311367, magic 0x0bd10bd0, pattern 0x1 Lustre: 11963:0:(lov_pack.c:65:lov_dump_lmm_common()) stripe_size 1048576, stripe_count 4, layout_gen 0 Lustre: 11963:0:(lov_pack.c:84:lov_dump_lmm_objects()) stripe 0 idx 10 subobj 0x0:151194471 Lustre: 11963:0:(lov_pack.c:84:lov_dump_lmm_objects()) stripe 1 idx 12 subobj 0x0:152477530 Lustre: 11963:0:(lov_pack.c:84:lov_dump_lmm_objects()) stripe 2 idx 25 subobj 0x0:151589797 Lustre: 11963:0:(lov_pack.c:84:lov_dump_lmm_objects()) stripe 3 idx 2 subobj 0x0:150332564 LustreError: 11963:0:(lov_object.c:244:lov_init_raid0()) fsname-clilov-ffff92ec34f4e000: OST 0019 is not initialized LustreError: 11963:0:(lov_object.c:244:lov_init_raid0()) Skipped 3 previous similar messages LustreError: 11963:0:(lcommon_cl.c:181:cl_file_inode_init()) Failure to initialize cl object [0x20004c047:0xdf4e:0x0]: -5 LustreError: 11963:0:(lcommon_cl.c:181:cl_file_inode_init()) Skipped 3 previous similar messages LustreError: 11963:0:(llite_lib.c:2328:ll_prep_inode()) new_inode -fatal: rc -5 LustreError: 37233:0:(lcommon_cl.c:160:cl_file_inode_init()) ASSERTION(inode->i_state & (1 << 3) ) failed LustreError: 37233:0:(lcommon_cl.c:160:cl_file_inode_init()) LBUG Pid: 37233, comm: ll_sa_4709 3.10.0-862.14.4.el7.x86_64 #1 SMP Call Trace: libcfs_call_trace+0x8c/0xc0 [libcfs] lbug_with_loc+0x4c/0xa0 [libcfs] cl_file_inode_init+0x2ac/0x300 [lustre] ll_update_inode+0x315/0x600 [lustre] ll_iget+0x163/0x350 [lustre] ll_prep_inode+0x232/0xc80 [lustre] sa_handle_callback+0x3a4/0xf70 [lustre] ll_statahead_thread+0x40e/0x2080 [lustre] kthread+0xd1/0xe0 Kernel panic - not syncing: LBUG
- is related to
-
LU-13143 detect console spew during (interop) testing
-
- Open
-